Highlighted records loaded and rendered into home page